--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Library/ArtifactDB
+Library/ArtifactDB
+Library/LastSceneManagerSetup.txt
+Library/SourceAssetDB
+UserSettings/EditorUserSettings.asset
