ignore it already

--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
-UserSettings/EditorUserSettings.asset
-UserSettings/Layouts/default-2021.dwlt
+UserSettings/
